wip: group service & endpoints
